feat: 新增删除回收站卷与清空回收站接口
